# OpenGL-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: glad.c  main.cpp
src/GraphicsEngine/: GraphicsEngine.cpp  GraphicsEngine.hpp
src/GraphicsEngine/Camera/: Camera.hpp
src/GraphicsEngine/Lighting/: Light.hpp
src/GraphicsEngine/Material/: Material.hpp
src/GraphicsEngine/Mesh/: Mesh.cpp  Mesh.hpp  Vertex.hpp
src/GraphicsEngine/Model/: Model.hpp
src/GraphicsEngine/Renderer/: Renderer.hpp
src/GraphicsEngine/Shader/: Shader.cpp  Shader.hpp
src/GraphicsEngine/Texture/: Texture.hpp
src/PhysicsEngine/: PhysicsEngine.hpp
src/SceneManager/: SceneManager.hpp
src/SceneManager/Scene/: Scene.hpp
src/Test/: Triangle.cpp  Triangle.hpp
